# bevy_antsim

./: Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: release.yaml
game_plugin/: Cargo.toml
game_plugin/src/: ant.rs  colony.rs  control.rs  debug.rs  food.rs  grid.rs  lib.rs  loading.rs  menu.rs  paused.rs  shapes.rs
game_plugin/src/loading/: paths.rs
src/: main.rs
