[package]
name = "game_plugin"
version = "0.1.0"
authors = ["Alyssa Awoo <alticodes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

dynamic = [
    "bevy/dynamic",
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
flat_spatial = { version = "0.3.7" }
rand = "0.8.3"

bevy_egui = "*"
bevy-inspector-egui = "*"
bevy_prototype_lyon = "0.3"
bevy_input_actionmap = { git = "https://github.com/lightsoutgames/bevy_input_actionmap" }
